--- a/css/section.css
+++ b/css/section.css
@@ -1,14 +1,12 @@
 .section {
     max-width: 800px;
     background-color: white;
-    margin: 5px auto;
-    padding: 2px;
+    padding: 5px;
 }
 
 .section__header {
     font-size: 20px;
-    padding: 20px;
-    margin: 20px 10px;
+    margin: 10px;
 }
 
 .section__container {
